# core_affinity_rs

./: .gitattributes  .rumdl.toml  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: lib.rs
src/platform/: freebsd.rs  linux.rs  macos.rs  netbsd.rs  stub.rs  windows.rs
