[package]
name = "core_affinity"
version = "1.0.0"
authors = [
    "Adam Bryant <adam.bryant@launchwindow.io>",
    "Justin Sharma <justin.sharma@launchwindow.io>",
]
edition = "2024"
rust-version = "1.93.0"
description = "CPU affinity management for Rust threads across supported platforms"
readme = "README.md"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/core_affinity/"
homepage = "https://launchwindow.io"
repository = "https://github.com/launchwindow-software/core_affinity_rs"
publish = false
keywords = ["affinity", "thread-affinity", "cpu", "core", "scheduling"]
categories = ["os"]
include = [
    "src/**",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
]

[package.metadata]
maintained-by = "launchwindow-software"

[package.metadata.upstream]
crate = "core_affinity_rs"
repository = "https://github.com/Elzair/core_affinity_rs"
original-author = "Philip Woods <elzairthesorcerer@gmail.com>"
license-note = "Original project copyright and license notices are retained in LICENSE-APACHE and LICENSE-MIT."

[package.metadata.release]
publish = false
notes = "Internal fork; not published to crates.io"

[features]
default = []
errors = ["dep:thiserror"]

[dependencies]
num_cpus = "^1.17.0"
thiserror = { version = "^2.0.18", optional = true, default-features = false }

[target.'cfg(any(target_os = "android", target_os = "linux", target_os = "macos", target_os = "freebsd", target_os = "netbsd"))'.dependencies]
libc = "^0.2.183"

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
features = ["Win32_System_SystemInformation", "Win32_System_Threading"]
version = "^0.61.2"
